--- a/styles-config.json
+++ b/styles-config.json
@@ -9,6 +9,12 @@
       "small": 10,
       "medium": 20,
       "large": 30
+    },
+    "size": {
+      "small": 12,
+      "medium": 14,
+      "large": 16,
+      "full": "100%"
     }
   }
 }
