Style system font base created

--- a/ios/photo_editor/Info.plist
+++ b/ios/photo_editor/Info.plist
@@ -41,6 +41,7 @@
 		<string>Zocial.ttf</string>
 		<string>Fontisto.ttf</string>
 		<string>Poppins-Medium.ttf</string>
+		<string>Poppins-Bold.ttf</string>
 	</array>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
