--- a/style-config.json
+++ b/style-config.json
@@ -1,9 +1,20 @@
 {
   "theme": {
     "color": {
-      "white": "#fff",
-      "red": "#FF0000",
-      "black": "#000"
+      "light": {
+        "mainBgColor": "#f8f9fa",
+        "text": "black",
+        "white": "black",
+        "danger": "#FF0000",
+        "black": "#000"
+      },
+      "dark": {
+        "mainBgColor": "#212529",
+        "text": "#fff",
+        "white": "#fff",
+        "danger": "black",
+        "black": "#000"
+      }
     },
     "spacing": {
       "small": 10,
