--- a/package.json
+++ b/package.json
@@ -23,12 +23,15 @@
     "axios": "^0.26.1",
     "react": "^17.0.2",
     "react-native": "0.68.0",
+    "react-native-fast-image": "^8.5.11",
     "react-native-gesture-handler": "^1.10.3",
+    "react-native-image-progress": "^1.2.0",
     "react-native-safe-area-context": "^4.2.4",
     "react-native-screens": "^3.13.1",
     "react-native-vector-icons": "^9.1.0",
     "react-redux": "^7.2.8",
-    "redux-thunk": "^2.4.1"
+    "redux-thunk": "^2.4.1",
+    "rn-placeholder": "^3.0.3"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
