--- a/package.json
+++ b/package.json
@@ -21,8 +21,11 @@
     "@react-navigation/native": "^6.0.10",
     "@react-navigation/stack": "^6.2.1",
     "axios": "^0.26.1",
+    "i18next": "^21.6.14",
     "react": "^17.0.2",
+    "react-i18next": "^11.16.2",
     "react-native": "0.68.0",
+    "react-native-encrypted-storage": "^4.0.2",
     "react-native-fast-image": "^8.5.11",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-image-progress": "^1.2.0",
