--- a/style-config.json
+++ b/style-config.json
@@ -3,18 +3,20 @@
     "color": {
       "light": {
         "mainBgColor": "#f8f9fa",
-        "text": "black",
         "white": "black",
         "danger": "#FF0000",
         "black": "#000",
+        "text-color": "#a1a1a1",
+        "text-color-dark": "#30363b",
         "border-color": "#30363d"
       },
       "dark": {
         "mainBgColor": "#0e1117",
-        "text": "#fff",
         "white": "#fff",
         "danger": "black",
         "black": "#000",
+        "text-color": "#a1a1a1",
+        "text-color-dark": "#fff",
         "border-color": "#30363d"
       }
     },
