--- a/style-config.json
+++ b/style-config.json
@@ -5,6 +5,7 @@
         "mainBgColor": "#f8f9fa",
         "white": "black",
         "danger": "#FF0000",
+        "primary": "#2B7D80",
         "black": "#000",
         "text-color": "#a1a1a1",
         "text-color-dark": "#30363b",
@@ -13,6 +14,7 @@
       "dark": {
         "mainBgColor": "#0e1117",
         "white": "#fff",
+        "primary": "#2B7D80",
         "danger": "black",
         "black": "#000",
         "text-color": "#a1a1a1",
