project lottie animation base created

--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "ios": "react-native run-ios",
     "start": "react-native start",
     "test": "jest",
+    "app:name": "npx react-native-rename <your-project-name> -b <bundleIdentifier>",
     "pod": "npx pod-install ios",
     "xcode": "cd ios && xed . && cd ..",
     "clean:android": "cd android && ./gradlew clean && cd ..",
@@ -22,6 +23,7 @@
     "@react-navigation/stack": "^6.2.1",
     "axios": "^0.26.1",
     "i18next": "^21.6.14",
+    "lottie-react-native": "^5.0.1",
     "react": "^17.0.2",
     "react-i18next": "^11.16.2",
     "react-native": "0.68.0",
