--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-native-image-progress": "^1.2.0",
     "react-native-safe-area-context": "^4.2.4",
     "react-native-screens": "^3.13.1",
+    "react-native-splash-screen": "^3.3.0",
     "react-native-vector-icons": "^9.1.0",
     "react-redux": "^7.2.8",
     "redux-thunk": "^2.4.1",
