--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "pod": "npx pod-install ios",
     "xcode": "cd ios && xed . && cd ..",
     "clean:android": "cd android && ./gradlew clean && cd ..",
-    "clean:ios": "cd ios && xcodebuild clean && cd ..",
+    "clean:ios": "rm -fr ios/build && cd ios && xcodebuild clean && cd ..",
     "start-reset-cache": "npm run start -- --reset-cache",
     "dev-clean": "rm -rf ~/Library/Developer/Xcode/DerivedData",
     "link:font": "npx react-native link",
@@ -31,6 +31,7 @@
     "react-native-fast-image": "^8.5.11",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-image-progress": "^1.2.0",
+    "react-native-permissions": "^3.3.1",
     "react-native-safe-area-context": "^4.2.4",
     "react-native-screens": "^3.13.1",
     "react-native-splash-screen": "^3.3.0",
