--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -212,12 +212,12 @@ android {
         }
     }
     signingConfigs {
-        debug {
+        /* debug {
             storeFile file('debug.keystore')
             storePassword 'android'
             keyAlias 'androiddebugkey'
             keyPassword 'android'
-        }
+        } */
     }
     buildTypes {
         debug {
