--- a/.gitignore
+++ b/.gitignore
@@ -8,9 +8,11 @@
 build/
 ios/Pods/
 ios/Podfile.lock
+ios/.xcode.env.local
 
 # Local configuration file (sdk path, etc)
 local.properties
+.cxx/
 
 # Log/OS Files
 *.log
@@ -279,5 +281,11 @@ Icon
 Network Trash Folder
 Temporary Items
 .apdisk
+
+
+**/fastlane/report.xml
+**/fastlane/Preview.html
+**/fastlane/screenshots
+**/fastlane/test_output
 
 # End of https://www.toptal.com/developers/gitignore/api/android,reactnative
