--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "photo_editor",
+  "name": "TsBoilerPlate",
   "version": "0.0.1",
   "private": true,
   "scripts": {
@@ -7,7 +7,7 @@
     "ios": "react-native run-ios",
     "start": "react-native start",
     "test": "jest",
-    "app:name": "npx react-native-rename <your-project-name> -b <bundleIdentifier>",
+    "app:name": "npx react-native-rename TsBoilerPlate -b com.ts-boiler-plate",
     "pod": "npx pod-install ios",
     "xcode": "cd ios && xed . && cd ..",
     "clean:android": "cd android && ./gradlew clean && cd ..",
@@ -24,9 +24,9 @@
     "axios": "^0.26.1",
     "i18next": "^21.6.14",
     "lottie-react-native": "^5.0.1",
-    "react": "^17.0.2",
     "react-i18next": "^11.16.2",
-    "react-native": "0.68.0",
+    "react": "18.1.0",
+    "react-native": "0.70.6",
     "react-native-encrypted-storage": "^4.0.2",
     "react-native-fast-image": "^8.5.11",
     "react-native-gesture-handler": "^1.10.3",
@@ -58,8 +58,8 @@
     "eslint-plugin-react": "^7.29.4",
     "eslint-plugin-react-hooks": "^4.4.0",
     "jest": "^26.6.3",
-    "metro-react-native-babel-preset": "^0.67.0",
-    "react-test-renderer": "17.0.2",
+    "metro-react-native-babel-preset": "0.72.3",
+    "react-test-renderer": "18.1.0",
     "typescript": "^4.4.4"
   },
   "resolutions": {
