--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "ios": "react-native run-ios",
     "start": "react-native start",
     "test": "jest",
-    "app:name": "npx react-native-rename TsBoilerPlate -b com.ts-boiler-plate",
+    "app:name": "npx react-native-rename TsBoilerPlate -b com.example",
     "pod": "npx pod-install ios",
     "xcode": "cd ios && xed . && cd ..",
     "clean:android": "cd android && ./gradlew clean && cd ..",
