--- a/ios/photo_editor.xcodeproj/xcshareddata/xcschemes/photo_editor.xcscheme
+++ b/ios/photo_editor.xcodeproj/xcshareddata/xcschemes/photo_editor.xcscheme
@@ -15,9 +15,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-               BuildableName = "photo_editor.app"
-               BlueprintName = "photo_editor"
-               ReferencedContainer = "container:photo_editor.xcodeproj">
+               BuildableName = "TsBoilerPlate.app"
+               BlueprintName = "TsBoilerPlate"
+               ReferencedContainer = "container:TsBoilerPlate.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -33,9 +33,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "00E356ED1AD99517003FC87E"
-               BuildableName = "photo_editorTests.xctest"
-               BlueprintName = "photo_editorTests"
-               ReferencedContainer = "container:photo_editor.xcodeproj">
+               BuildableName = "TsBoilerPlateTests.xctest"
+               BlueprintName = "TsBoilerPlateTests"
+               ReferencedContainer = "container:TsBoilerPlate.xcodeproj">
             </BuildableReference>
          </TestableReference>
       </Testables>
@@ -55,9 +55,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "photo_editor.app"
-            BlueprintName = "photo_editor"
-            ReferencedContainer = "container:photo_editor.xcodeproj">
+            BuildableName = "TsBoilerPlate.app"
+            BlueprintName = "TsBoilerPlate"
+            ReferencedContainer = "container:TsBoilerPlate.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </LaunchAction>
@@ -72,9 +72,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "photo_editor.app"
-            BlueprintName = "photo_editor"
-            ReferencedContainer = "container:photo_editor.xcodeproj">
+            BuildableName = "TsBoilerPlate.app"
+            BlueprintName = "TsBoilerPlate"
+            ReferencedContainer = "container:TsBoilerPlate.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </ProfileAction>
