--- a/template/ios/Podfile
+++ b/template/ios/Podfile
@@ -4,7 +4,7 @@ require_relative '../node_modules/@react-native-community/cli-platform-ios/nativ
 platform :ios, '12.4'
 install! 'cocoapods', :deterministic_uuids => false
 
-target 'AwesomeProject' do
+target 'boilerplate' do
   config = use_native_modules!
 
   # Permissions
@@ -50,7 +50,7 @@ target 'AwesomeProject' do
     :app_path => "#{Pod::Config.instance.installation_root}/.."
   )
 
-  target 'AwesomeProjectTests' do
+  target 'boilerplateTests' do
     inherit! :complete
     # Pods for testing
   end
